# sigma-llm-doc

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml  sigma-llm-doc-project-template.md
prompt_tests/: cost_analysis.md  default_prompt_sample_test.txt  model_ranking.md
prompt_tests/sample_outputs/: gemini-3-fast.md  gemini-3-pro.md  gemini-3-thinking.md  gpt-4o-mini.md  gpt-5.2-thinking.md  gpt-5.2.md  haiku-4.5.md  opus-4.5.md  opus-4.6.md
scripts/: fix_lolrmm_yaml.py
src/sigma_llm_doc/: __init__.py  cache.py  cli.py  config.py  default_prompt.txt  llm_provider.py  processor.py  validator.py
tests/: test_cache.py  test_validator.py
